
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-03-18 Christophe Demko <chdemko@gmail.com>
	* README.md
	* lib/jacoco/jacocoant.jar
		^ Use jacoco 0.6.5

2014-03-15 Clement Guerin <guerin.clement@live.fr>
        * test/lattice/ContextTest.java
        * src/lattice/Context.java
            ^ Correct a few mix-ups on extent/intent comments
            ^ Simplify setMaps() (arrayAttributes and arrayObservations might be redondant with attributes and observations)
            + Add getIntentNb method
            + Add setBitSets calls each time attributes, observations, intents or extents are modified

2014-03-14 Clement Guerin <guerin.clement@live.fr>
	* src/lattice/Context.java
		^ Correct getReverseContext() method

2014-03-14 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* doc/api/README.md
	* src/dgraph/DAGraph.iuml
	* src/dgraph/DAGraph.java
	* src/dgraph/DGraph.iuml
	* src/dgraph/DGraph.java
	* src/dgraph/Edge.iuml
	* src/dgraph/Edge.java
	* src/dgraph/Node.iuml
	* src/dgraph/Node.java
	* src/lattice/ArrowRelation.iuml
	* src/lattice/ArrowRelation.java
	* src/lattice/BijectiveComponents.iuml
	* src/lattice/BijectiveComponents.java
	* src/lattice/ClosureSystem.iuml
	* src/lattice/ClosureSystem.java
	* src/lattice/ComparableSet.iuml
	* src/lattice/ComparableSet.java
	* src/lattice/Concept.iuml
	* src/lattice/Concept.java
	* src/lattice/ConceptLattice.java
	* src/lattice/Context.iuml
	* src/lattice/Context.java
	* src/lattice/ImplicationalSystem.iuml
	* src/lattice/ImplicationalSystem.java
	* src/lattice/Lattice.iuml
	* src/lattice/Lattice.java
	* src/lattice/Rule.iuml
	* src/lattice/Rule.java
	* src/lattice/ConceptLattice.iuml
		+ Finish UML graphs
